gradle-7.5.1; better build, with errorprone, jsoup:1.15.+; better gitignore,